User Authentication implementation, Car User controllers update, Integration tests